[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/StationMenu.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 1 )

[node name="StationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="PlayDialog" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -133.0
margin_top = -119.0
margin_right = 133.0
theme = SubResource( 1 )
text = "Play dialog"

[node name="TakeControl" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -266.0
margin_top = -59.5
margin_bottom = 59.5
grow_horizontal = 0
theme = SubResource( 1 )
text = "Take control"

[node name="LocateStation" type="Button" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -59.5
margin_right = 266.0
margin_bottom = 59.5
theme = SubResource( 1 )
text = "Locate unmarked station"

[node name="JumpToClock" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -312.0
margin_top = -59.5
margin_bottom = 59.5
theme = SubResource( 1 )
text = "Jump to clock"

[connection signal="pressed" from="PlayDialog" to="." method="_on_PlayDialog_pressed"]
[connection signal="pressed" from="TakeControl" to="." method="_on_TakeControl_pressed"]
[connection signal="pressed" from="LocateStation" to="." method="_on_LocateStation_pressed"]
[connection signal="pressed" from="JumpToClock" to="." method="_on_JumpToClock_pressed"]
